--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "nuxt-app",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -10,15 +8,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^0.8.2",
-    "@mdi/font": "^7.4.47",
-    "@pinia/nuxt": "^0.5.1",
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "@mdi/font": "^6.5.95",
+    "@nuxtjs/vuetify": "^1.12.3",
+    "@tiptap/starter-kit": "2.0.0-beta.192",
+    "@tiptap/vue-3": "2.0.0-beta.97",
+    "apexcharts": "3.36.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.0.0",
+    "vue": "3.2.45",
+    "vue-router": "^4.1.6",
+    "vue-style-loader": "^4.1.3",
+    "vue-tabler-icons": "2.9.0",
+    "vue3-apexcharts": "1.4.1",
+    "vue3-perfect-scrollbar": "1.6.0",
+    "vuetify": "3.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "vite-plugin-vuetify": "^2.0.3",
-    "vuetify": "^3.5.16"
+    "nuxt": "3.0.0"
   }
 }
